# irinarain-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: Dockerfile  cd.yaml  ci.yaml
src/: app.rs  bot.rs  main.rs
src/bot/: callback_query.rs  entities.rs  message.rs  my_chat_member.rs  pre_checkout_query.rs
