[package]
name = "rain-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
postgrest = "1.6.0"
serde = "1.0.197"
serde_json = "1.0.115"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
